name:                poli-format
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  default-extensions:  MultiWayIf
                     , TypeApplications
  build-depends:       base >=4.11.0 && <4.15
                     , containers >=0.6.0 && <0.7
                     , directory >=1.3.3 && <1.4
                     , haskell-src-exts >=1.21.1 && <1.24
                     , uniplate >=1.6.12 && <1.7
  exposed-modules:     Poli.Format

executable poli-format
  main-is:             src/Main.hs
  default-language:    Haskell2010
  default-extensions:  LambdaCase
  ghc-options:         -O2 -Wall -threaded -rtsopts
  build-depends:       base >=4.11.0 && <4.15
                     , poli-format
